# Projet_annuel

./: .gitIgnore  .gitignore  MultiLayerPerceptron.cpp  MultiLayerPerceptron.h
ClionStuff/: CMakeLists.txt  Hoge.cpp  Hoge.h
PAClient/: .gitignore  Assembly-CSharp.csproj  PAClient.sln
PAClient/Assets/Scenes/: SampleScene.unity
PAClient/Assets/scripts/: NativePluginLoader.cs  mytest.cs
PAClient/ProjectSettings/: ProjectSettings.asset
